# voice-agent-orchestrator

./: .env.example  .gitignore  Makefile  README.md  console_demo.py  main.py  pyproject.toml
.github/workflows/: ci.yml
sample_transcripts/: edge_case_correction.json  edge_case_interruption.json  failed_incomplete_info.json  failed_no_availability.json  successful_booking.json
src/: config.py  logging_context.py  utils.py
src/agents/: __init__.py  booking_agent.py  compat.py  escalation_agent.py  info_agent.py  intake_agent.py  registry.py
src/conversation/: __init__.py  guardrails.py  slot_manager.py  state_machine.py
src/evaluation/: __init__.py  auto_improver.py  failure_detector.py  metrics.py  run_eval.py  transcript_analyzer.py
src/prompts/: prompt_templates.py  system_prompts.py
src/schemas/: booking_schema.py  conversation_schema.py  customer_schema.py
src/tools/: availability.py  booking.py  customer.py  services.py
tests/: conftest.py  test_agent_tools.py  test_booking_flow.py  test_config.py  test_eval_framework.py  test_guardrails.py  test_imports.py  test_slot_filling.py  test_state_machine.py  test_utils.py
